# Smol

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE.md  Makefile  Makefile.template  README.md  THIRD_PARTY_NOTICES.md  __init__.py  alembic.ini  db_init.py  docker-compose.yml  docker-compose.yml.sample  entrypoint.sh  eslint.config.mjs  local.env  main.spec  omoide.env.example  package-lock.json  package.json  pornlulu.py  pyproject.toml  qt.conf  requirements-ci.txt  requirements.txt  smol.env.template  start.sh  template.env  upscale.ipynb
.data/: config.yaml
.github/workflows/: pyinstaller.yml
Logo Raw/: Moars Logo.ai
alembic/: env.py
alembic/versions/: 07e41014ba49_initial_migration.py  4472c47816da_remove_person_similarity.py  4763f07751ca_add_index_to_face_person_id.py  698da7bee6e8_add_imagehash_and_blacklist.py  6dc68d69ae18_rename_me.py  70b51c6758b2_add_duplicateignore.py  7b61f855d2b3_add_missing_flags.py  863326504dd6_add_lat_and_lon_indices.py  92f7ecebc445_add_auto_tagger.py  94d1f4d9ef32_add_person_relationship.py  b6c903f59589_add_duplicate_groups_and_duplicate_.py  d1782ccf5482_add_index_to_face_media_id.py  ff02edc363ba_add_appearance_count.py
app/: concurrency.py  config.py  database.py  ffmpeg.py  logger.py  main.py  models.py  processor_registry.py  schemas.py  subprocess_helpers.py  tagging.py  utils.py  version.py  write_queue.py
app/api/: __init__.py  config.py  duplicates.py  face.py  media.py  missing.py  person.py  processors.py  search.py  tags.py  tasks.py
app/models/: scrfd_2.5g_bnkps.onnx
app/processors/: auto_tagger.py  base.py  duplicates.py  embedding_extractor.py  exif.py  faces.py  scene_tagger.py
app/schemas/: duplicates.py  face.py  media.py  missing.py  person.py  scene.py  search.py  tag.py  timeline.py
app/services/: __init__.py  releases.py
app/tasks/: __init__.py  auto_tagging.py  common.py  duplicates.py  hashes.py  maintenance.py  media_processing.py  person_clustering.py  pipeline.py  relationships.py  scan.py  state.py
connector/: postgresql.py
fapflix/: manage.py
fapflix/fapflix/: asgi.py  settings.py  urls.py  wsgi.py
fapflix/viewer/: admin.py  context_processors.py  detector.py  forms.py  models.py  urls.py  utils.py  video_processor.py  views.py
frontend/: .env  .env.development  .env.production  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.mts  vite.config.ts
frontend/src/: App.tsx  ThemeContext.tsx  (+8 more)
moars/: manage.py
nginx/: Dockerfile  nginx.conf
smol/: manage.py
versions/: 6b0604629099_fix_person_embedding.py
(+189 files in other folders)
